[gd_scene load_steps=5 format=2]

[ext_resource path="res://dodge_assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://hud.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 54
outline_color = Color( 0.0313726, 0.109804, 0.462745, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 54
outline_color = Color( 0.0627451, 0.0588235, 0.0588235, 1 )
font_data = ExtResource( 1 )

[node name="hud" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ScoreLabel" type="Label" parent="."]
modulate = Color( 0.0941176, 0.0901961, 0.0901961, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -240.0
margin_right = 240.0
margin_bottom = 720.0
rect_pivot_offset = Vector2( 61.3278, 55.4389 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.0980392, 0.0980392, 0.0980392, 1 )
text = "   111"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTimer" type="Timer" parent="."]

[node name="CoinLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -240.0
margin_right = 240.0
margin_bottom = 720.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0
"
align = 3
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
